--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,14 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+I have experience as the sole instructor for:
+* PUBPOL 528: Memo writing for International Students
+* Math Camp for incoming MPA students
+* Math Camp for incoming PhD students
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+I have been a teaching assistant for several courses in the core MPA curriculum:
+* PUBPOL 511: Managing Politics and the Policy Process
+* PUBPOL 527: Quantitative Analysis I
+* PUBPOL 526: Program Evaluation
+
+I have also served two years as the teaching assistant for the [International Program in Public Health Leadership](https://evans.uw.edu/faculty-research/research-centers-and-projects/international-program-in-public-health-leadership/), a policy and leadership program for mid-career public health professionals in Africa. In this role, I oversee the policy project, coordinate interactions between fellows and advisors, and guest lecture on economic evaluation in public health.
