--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,10 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
-I have experience as the sole instructor for:
-* PUBPOL 528: Memo writing for International Students
-* Math Camp for incoming MPA students
-* Math Camp for incoming PhD students
+I have experience as the sole instructor for:<br>
+<ul><li>PUBPOL 528: Memo writing for International Students
+  </li><li>Math Camp for incoming MPA students
+</li><li>Math Camp for incoming PhD students
+  </li></ul>
 
 I have been a teaching assistant for several courses in the core MPA curriculum:
 * PUBPOL 511: Managing Politics and the Policy Process
