--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,9 +11,10 @@ I have experience as the sole instructor for:<br>
 </li><li>Math Camp for incoming PhD students
   </li></ul>
 
-I have been a teaching assistant for several courses in the core MPA curriculum:
-* PUBPOL 511: Managing Politics and the Policy Process
-* PUBPOL 527: Quantitative Analysis I
-* PUBPOL 526: Program Evaluation
+I have been a teaching assistant for several courses in the core MPA curriculum:<br>
+<ul><li>PUBPOL 511: Managing Politics and the Policy Process
+  </li><li>PUBPOL 527: Quantitative Analysis I
+  </li><li>PUBPOL 526: Program Evaluation
+</li></ul>
 
-I have also served two years as the teaching assistant for the [International Program in Public Health Leadership](https://evans.uw.edu/faculty-research/research-centers-and-projects/international-program-in-public-health-leadership/), a policy and leadership program for mid-career public health professionals in Africa. In this role, I oversee the policy project, coordinate interactions between fellows and advisors, and guest lecture on economic evaluation in public health.
+I have also served two years as the teaching assistant for the <a href="https://evans.uw.edu/faculty-research/research-centers-and-projects/international-program-in-public-health-leadership/">International Program in Public Health Leadership</a>, a policy and leadership program for mid-career public health professionals in Africa. In this role, I oversee the policy project, coordinate interactions between fellows and advisors, and guest lecture on economic evaluation in public health.
